Changes made from the "0.3" release to the "0.4" release:
-----------------------------------------------------------

- Brandon Casey fixed the rendering commands so that the character sequence
  \<0> is not issued when glcRenderString is called with a zero length string
  (i.e. a string that only contains the null terminator) 
- Brandon Casey fixed the measurement commands so that they give correct values
  for the minimum y coordinate
- Functions of QuesoGLC now handle correctly NULL pointers given as arguments
- Brandon Casey changed the GL_TEXTURE_ENV_MODE to GL_MODULATE instead of
  GL_REPLACE in order to allow the user to change the transparency of the text
  by setting the alpha component with glColor4*()
- Brandon Casey fixed the GLC_BITMAP and GLC_TEXTURE rendering styles so that
  the complete set of GL_UNPACK parameters are set before the picture is
  uploaded in order not to depend on the user setting of those parameters
- Brandon Casey provided a patch to allow QuesoGLC to compile with FreeType libs
  older than 2.1.8 (winfonts were not supported before 2.1.8)
- Pablo Barbachano provided a patch to allow QuesoGLC to use FreeType 2.2.x
  (const-ness added to some parameters of the callbak functions of
  FT_Outline_Decompose)
- Removed the stupid limit that generated GLC_PARAMETER_ERROR whenever some
  functions were called when the string type was GLC_UTF8_QSO (see below).
  Indeed a Unicode codepoint can be no higher than 0x10ffff and can thus be
  stored in a 32 bits integer in UTF-8 format.
- Uses GNU extensions of gcc where possible to implement the constructor and the
  destructor of the library (instead of _init and _fini)
- Fixed the crashes due to the removal of the combine callback of the GLU
  tesselator. The callback is now restored and compatible with the arrays of
  variable size (__glcArray)
- Quesoglc now uses autotools to build
- Thomas Zimmermann fixed the string measurement commands that did not return