@@ -534,17 +534,6 @@ GLCchar* __glcConvertFromUtf8ToBuffer(__glcContextState* This,
   return string;
 }
 
-/* This function counts the number of bits that are set in c1 
- * Copied from Keith Packard's fontconfig
- */
-FcChar32 __glcCharSetPopCount(FcChar32 c1)
-{
-  /* hackmem 169 */
-  FcChar32    c2 = (c1 >> 1) & 033333333333;
-  c2 = c1 - c2 - ((c2 >> 1) & 033333333333);
-  return (((c2 + (c2 >> 3)) & 030707070707) % 077);
-}
-
 /* Convert 'inCount' characters of 'inString' in the UTF-8 format and return a
  * copy of the converted string.
  */
@@ -715,56 +704,6 @@ GLint __glcConvertGLintToUcs4(__glcContextState *inState, GLint inCode)
 
 
 
-/* Get the minimum mapped code of a character set */
-GLint __glcGetMinMappedCode(FcCharSet *charSet)
-{
-  FcChar32 base = 0;
-  FcChar32 next = 0;
-  FcChar32 map[FC_CHARSET_MAP_SIZE];
-  int i = 0, j = 0;
-
-  base = FcCharSetFirstPage(charSet, map, &next);
-  assert(base != FC_CHARSET_DONE);
-
-  for (i = 0; i < FC_CHARSET_MAP_SIZE; i++)
-    if (map[i]) break;
-  assert(i < FC_CHARSET_MAP_SIZE); /* If the map contains no char then
-				    * something went wrong... */
-  for (j = 0; j < 32; j++)
-    if ((map[i] >> j) & 1) break;
-  return base + (i << 5) + j;
-}
-
-
-
-/* Get the maximum mapped code of a character set */
-GLint __glcGetMaxMappedCode(FcCharSet *charSet)
-{
-  FcChar32 base = 0;
-  FcChar32 next = 0;
-  FcChar32 prev_base = 0;
-  FcChar32 map[FC_CHARSET_MAP_SIZE];
-  int i = 0, j = 0;
-
-  base = FcCharSetFirstPage(charSet, map, &next);
-  assert(base != FC_CHARSET_DONE);
-
-  do {
-    prev_base = base;
-    base = FcCharSetNextPage(charSet, map, &next);
-  } while (base != FC_CHARSET_DONE);
-
-  for (i = FC_CHARSET_MAP_SIZE - 1; i >= 0; i--)
-    if (map[i]) break;
-  assert(i >= 0); /* If the map contains no char then
-		   * something went wrong... */
-  for (j = 31; j >= 0; j--)
-    if ((map[i] >> j) & 1) break;
-  return prev_base + (i << 5) + j;
-}
-
-
-
 /* Each thread has to store specific informations so they can retrieved later.
  * __glcGetThreadArea() returns a struct which contains thread specific info
  * for GLC. Notice that even if the lib does not support threads, this function
@@ -831,57 +770,6 @@ __glcContextState* __glcGetCurrent(void)
   assert(area);
 
   return area->currentContext;
-}
-
-
-
-GLCchar* __glcGetCharNameByIndex(FcCharSet* inCharSet, GLint inIndex,
-				 __glcContextState* inState)
-{
-  int i = 0;
-  int j = 0;
-  FcChar32 map[FC_CHARSET_MAP_SIZE];
-  FcChar32 next = 0;
-  FcChar32 base = FcCharSetFirstPage(inCharSet, map, &next);
-  FcChar32 count = 0;
-  FcChar32 value = 0;
-
-  do {
-    for (i = 0; i < FC_CHARSET_MAP_SIZE; i++) {
-      value = __glcCharSetPopCount(map[i]);
-
-      if (count + value >= inIndex + 1) {
-	for (j = 0; j < 32; j++) {
-	  if ((map[i] >> j) & 1) count++;
-	  if (count == inIndex + 1) {
-	    FcChar8* name = __glcNameFromCode(base + (i << 5) + j);
-	    GLCchar* buffer = NULL;
-
-	    if (!name) {
-	      __glcRaiseError(GLC_PARAMETER_ERROR);
-	      return GLC_NONE;
-	    }
-
-	    /* Performs the conversion */
-	    buffer = __glcConvertFromUtf8ToBuffer(inState, name,
-						  inState->stringType);
-	    if (!buffer) {
-	      __glcRaiseError(GLC_RESOURCE_ERROR);
-	      return GLC_NONE;
-	    }
-
-	    return buffer;
-	  }
-	}
-      }
-      count += value;
-    }
-    base = FcCharSetNextPage(inCharSet, map, &next);
-  } while (base != FC_CHARSET_DONE);
-
-  /* The character has not been found */
-  __glcRaiseError(GLC_PARAMETER_ERROR);
-  return GLC_NONE;
 }
 
 
